Dart/testData/analysisServer/highlighting/ErrorsAfterEOF.dart
class Foo<error descr="A class or mixin definition must have a body, even if it is empty.">o</error>